# delta-pico

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_bridge.py  build_font.py  build_res.py  font_tools.py  platformio.ini  test.py
.github/workflows/: sim-test.yml  test.yml
cad/delta-pico/: delta-pico.kicad_pcb
cad/rev1/: delta-pico.sch
cad/rev2/: delta-pico.kicad_pcb  delta-pico.sch
cad/rev3/: case.scad  delta-pico.kicad_pcb  delta-pico.kicad_pro  delta-pico.kicad_sch  fp-lib-table  sym-lib-table
cad/rev3/libraries/DeltaPico/: source.txt
cad/rev3/libraries/DeltaPico/DeltaPico.pretty/: ILI9341ModelOnly.kicad_mod
cad/rev3/libraries/DeltaPico/DeltaPico.pretty/Models/: ili9341.scad  ili9341.step  pts636.scad  pts636.step  step.py
cad/rev3/libraries/MCU_RaspberryPi_and_Boards/: source.txt
cad/rev3/libraries/MCU_RaspberryPi_and_Boards/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
design/: architecture.md  bitmaps.md  fonts.md
font/: fontspec
include/: animate.hpp  application.hpp  application_framework.hpp  button_matrix.h  button_matrix.hpp  cat24c.hpp  hardware.h  hardware.hpp  ili9341.hpp  pcf8574.hpp  tusb_config.h  usb_mass_storage.h
include/applications/: calculator.hpp
include/maths/: evaluator.hpp  tokens.hpp
rbop_bridge/: Cargo.toml  build.rs
rbop_bridge/src/: lib.rs
res/: DroidSans-20.vlw  DroidSansMono-20.vlw  DroidSansMono-30.vlw
rust/: Cargo.toml  build.rs  out
rust-hal/: Cargo.toml  build.rs
rust-hal/.cargo/: config.toml
rust-hal/src/: button_matrix.rs  cat24c.rs  droid_sans_20.rs  graphics.rs  ili9341.rs  main.rs  pcf8574.rs  rev.rs
rust-hal/src/util/: mod.rs  saturating_into.rs
rust/src/: c_allocator.rs  filesystem.rs  graphics.rs  interface.rs  lib.rs  multi_tap.rs  operating_system.rs  rbop_impl.rs  tests.rs  timer.rs  util.rs
rust/src/applications/: about.rs  bootloader.rs  calculator.rs  files.rs  graph.rs  memory.rs  menu.rs  mod.rs  multi_tap.rs  numbers_game.rs  real_time.rs  settings.rs  storage.rs  t9.rs  tetris.rs
rust/src/applications/calculator/: catalog.rs  mod.rs  sprite_cache.rs  test.rs
rust/src/applications/graph/: mod.rs  test.rs
rust/src/filesystem/: calculation_history.rs  chunk_table.rs  fat_interface.rs  mod.rs  raw_storage.rs  settings.rs
rust/src/graphics/: ascii_font.rs  mod.rs  sprite.rs
rust/src/interface/: buttons.rs  display.rs  mod.rs  storage.rs  usb_mass_storage.rs
rust/src/operating_system/: context_menu.rs  full_page_menu.rs  input.rs  mod.rs  pointer.rs  ui.rs
sim/: Cargo.toml
sim/src/: main.rs
src/: application_framework.cpp  button_matrix.cpp  cat24c.cpp  hardware.cpp  ili9341.cpp  main.cpp  msc_disk_dual.c  pcf8574.cpp  usb_descriptors.c  usb_mass_storage.c
src/applications/: calculator.cpp
src/maths/: evaluator.cpp  tokens.cpp
test/: evaluator.cpp
