[package]
name = "delta-pico-rust"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[build-dependencies]
cbindgen = "0.20.0"

[dependencies]
rbop = { path = "../../rbop" }
rust_decimal = { version = "1.9.0", default-features = false }
rand = { version = "0.4", default-features = false }

# crates.io latest version is very out-of-date and doesn't build
fatfs = { git = "https://github.com/rafalh/rust-fatfs", version = "0.4.0", default-features = false }
